<resources>
    <string name="app_name">Turnkey</string>
    <string name="info_try_after_some_time">Coming Soon!</string>
    <string name="menu_modular_kitchen">Modular kitchens</string>
    <string name="menu_wardrobes">Wardrobes</string>
    <string name="menu_sofas">Sofas</string>
    <string name="menu_dining_tables">Dining Tables</string>
    <string name="menu_curtains">Curtains</string>
    <string name="menu_lights">Lights</string>
    <string name="menu_alluminium_windows">Alluminium Windows</string>
    <string name="str_furniture">Furniture</string>
    <string name="str_living">Living</string>
    <string name="str_bedroom">Bedroom</string>
    <string name="str_kids_room">Kids Room</string>
    <string name="str_mattresses">Matteress</string>
    <string name="str_furnishings">Furnishings</string>
    <string name="str_decor">Decor</string>
    <string name="str_lightning">Lightning</string>
    <string name="str_gifting">Gifting</string>
    <string name="app_modular_furniture">Modular \nFurniture</string>
    <string name="whats_popular_in_furninture">Whats popular in furninture</string>
    <string name="shop_by_style">Shop by style</string>
    <string name="most_popular_brands">Most popular brands</string>
    <string name="rupee">\u20B9</string>
    <string name="rs">\u20A8</string>
    <string name="menu_home">Home</string>
    <string name="title_photos">Departments</string>
    <string name="menu_departments">Departments</string>
    <string name="menu_wish_list">Wishlist</string>
    <string name="menu_profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_our_blogs">Our Blogs</string>
    <string name="menu_need_help">Need Help?</string>
    <string name="menu_shop_by_department">SHOP BY DEPARTMENT</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_cart">Cart</string>

</resources>